--- a/eleve_cible.html
+++ b/eleve_cible.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rail-Fond V3.0 - Chrono</title>
+    <title>Les aventuriers du rail - 1/2 fond - Perf cible V4.0</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
         :root { --p: #2c3e50; --s: #27ae60; --d: #e74c3c; --b: #3498db; }
@@ -48,7 +48,7 @@
 <body onload="checkSave()">
 
     <div id="screen-setup" class="screen active padding">
-        <h2 style="text-align: center;">🚂 Rail-Fond V3.0</h2>
+        <h2 style="text-align: center;">🚂 Les aventuriers du rail - 1/2 fond V4.0</h2>
         <div id="names-inputs">
             <div class="setup-row"><input type="text" class="input-names" placeholder="Prénom"><input type="number" class="input-targets" placeholder="Cible (sec)"></div>
             <div class="setup-row"><input type="text" class="input-names" placeholder="Prénom"><input type="number" class="input-targets" placeholder="Cible (sec)"></div>
